PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
17 Sep 2015, PHP 7.0.0 RC 3

- CLI server:
  . Fixed bug #68291 (404 on urls with '+'). (cmb)

- DOM:
  . Fixed bug #70001 (Assigning to DOMNode::textContent does additional entity
    encoding). (cmb)

- Streams:
  . Fixed bug #70361 (HTTP stream wrapper doesn't close keep-alive connections).
    (Niklas Keller)

- Zip:
  . Fixed bug #70322 (ZipArchive::close() doesn't indicate errors). (cmb)

03 Sep 2015, PHP 7.0.0 RC 2

- Core:
  . Fixed bug #70398 (SIGSEGV, Segmentation fault zend_ast_destroy_ex).
    (Dmitry, Bob, Laruence)
  . Fixed bug #70332 (Wrong behavior while returning reference on object).
    (Laruence, Dmitry)
  . Fixed bug #70300 (Syntactical inconsistency with new group use syntax).
    (marcio dot web2 at gmail dot com)
  . Fixed bug #70321 (Magic getter breaks reference to array property).
    (Laruence)
  . Fixed bug #70187 (Notice: unserialize(): Unexpected end of serialized
    data). (Dmitry)
  . Fixed bug #70145 (From field incorrectly parsed from headers). (Anatol)
  . Fixed bug #70370 (Bundled libtool.m4 doesn't handle FreeBSD 10 when
    building extensions). (Adam)
  . Fixed bug causing exception traces with anon classes to be truncated. (Bob)
  . Fixed bug #70397 (Segmentation fault when using Closure::call and yield).
    (Bob)

- Curl:
  . Fixed bug #70330 (Segmentation Fault with multiple "curl_copy_handle").
    (Laruence)

- EXIF:
  . Fixed bug #70385 (Buffer over-read in exif_read_data with TIFF IFD tag byte
    value of 32 bytes). (Stas)

- hash:
  . Fixed bug #70312 (HAVAL gives wrong hashes in specific cases). (letsgolee
    at naver dot com)

- Mysqli:
  . Fixed bug #32490 (constructor of mysqli has wrong name). (cmb)

- Pcntl:
  . Fixed bug #70386 (Can't compile on NetBSD because of missing WCONTINUED
    and WIFCONTINUED). (Matteo)

- PCRE: